--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -2,68 +2,18 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head>
-    <title th:text="${pageTitle}">Default Title</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 20px;
-            background-color: #f4f4f4;
-        }
-
-        .container {
-            max-width: 800px;
-            margin: 0 auto;
-        }
-
-        h1 {
-            text-align: center;
-            color: #333;
-        }
-
-        .movie-list {
-            display: flex;
-            flex-direction: column;
-            gap: 20px;
-        }
-
-        .movie-card {
-            display: flex;
-            background-color: white;
-            border-radius: 5px;
-            overflow: hidden;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-        }
-
-        .movie-poster img {
-            width: 100px;
-            height: 150px;
-            object-fit: cover;
-            border-radius: 10px;
-        }
-
-        .movie-info {
-            padding: 20px;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-        }
-
-        .movie-title {
-            margin: 0 0 10px 0;
-            font-size: 24px;
-        }
-
-        .movie-year {
-            color: #666;
-            font-size: 18px;
-        }
-    </style>
+    <link rel="stylesheet" th:href="@{/css/search.css}">
 </head>
 
 <body>
     <div class="container">
-        <h1 th:text="${pageTitle}">Default Heading</h1>
+        <!-- Search Form -->
+        <form class="search-form" form action="/search" method="get">
+            <input type="text" name="query" class="search-input" placeholder="Search other movie...">
+            <button type="submit" class="search-button">Search</button>
+        </form>
+
+        <h1 th:text="${searchTitle}">Search Result</h1>
 
         <!-- Show movies if any exist -->
         <div class="movie-list" th:if="${movies != null}">
@@ -76,8 +26,14 @@
                     <h2 class="movie-title" th:text="${movie.title}">Movie Title</h2>
                     <span class="movie-year"
                         th:text="${#strings.length(movie.releaseDate) >= 4 ? #strings.substring(movie.releaseDate,0,4) : ''}">
-                        Year
-                    </span>
+                        Year</span>
+                    <div class="movie-genre">
+                        <div th:each="genre : ${movie.genres}">
+                            <span th:text="${genre.name}"></span>
+                            </span>
+
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
