--- a/src/main/resources/static/css/search.css
+++ b/src/main/resources/static/css/search.css
@@ -59,8 +59,8 @@ h1 {
 }
 
 .movie-poster img {
-    width: 100px;
-    height: 150px;
+    width: 110px;
+    height: 160px;
     object-fit: cover;
     border-radius: 15px;
 }
@@ -77,12 +77,28 @@ h1 {
     font-size: 24px;
 }
 
+.year-rating-container {
+    display: flex;
+    align-items: center;
+}
+
 .movie-year {
-    color: #666;
-    font-size: 18px;
+    color: black;
+    font-size: 16px;
+    margin-right: 10px;
 }
 
 .movie-genre {
-    display: pre-wrap;
-    font-size: 13px;
+    margin: 10px 0 0 0;
+    color: black;
+    font-style: italic;
+    font-size: 12px;
+}
+
+.movie-rating .fa-star {
+    color: #FFD700;
+}
+
+.movie-rating span {
+    color: black;
 }
