--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -3,6 +3,7 @@
 
 <head>
     <link rel="stylesheet" th:href="@{/css/search.css}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 
 <body>
@@ -24,14 +25,19 @@
                 </div>
                 <div class="movie-info">
                     <h2 class="movie-title" th:text="${movie.title}">Movie Title</h2>
-                    <span class="movie-year"
-                        th:text="${#strings.length(movie.releaseDate) >= 4 ? #strings.substring(movie.releaseDate,0,4) : ''}">
-                        Year</span>
+                    <span class="year-rating-container">
+                        <span class="movie-year"
+                            th:text="${#strings.length(movie.releaseDate) >= 4 ? #strings.substring(movie.releaseDate,0,4) : ''}">
+                            Year</span>
+                        <span class="movie-rating">
+                            <span class="fa fa-star"></span>
+                            <span th:text="${movie.rating}"></span>
+                        </span>
+                    </span>
                     <div class="movie-genre">
                         <div th:each="genre : ${movie.genres}">
                             <span th:text="${genre.name}"></span>
                             </span>
-
                         </div>
                     </div>
                 </div>
