--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -5,16 +5,12 @@ body {
     background-color: #f4f4f4;
 }
 
-.container {
-    max-width: 800px;
-    margin: 0 auto;
-}
-
 h1 {
     text-align: center;
     color: #333;
 }
 
+/* Search section */
 .search-form {
     margin-bottom: 20px;
     display: flex;
@@ -42,4 +38,88 @@ h1 {
 
 .search-button:hover {
     background-color: #0056b3;
+}
+
+/* Trending movies section */
+.trending-section {
+    margin-top: 20px;
+    max-width: 1000px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.trending-section h2 {
+    text-align: center;
+    color: #333;
+    margin-bottom: 5px;
+}
+
+.movie-list {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    gap: 20px;
+    padding: 10px;
+}
+
+.movie-card {
+    background-color: white;
+    border-radius: 8px;
+    overflow: hidden;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s;
+}
+
+.movie-card:hover {
+    transform: translateY(-5px);
+}
+
+.movie-poster {
+    width: 100%;
+    height: 225px;
+    overflow: hidden;
+}
+
+.movie-poster img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.movie-info {
+    padding: 5px;
+    text-align: center;
+}
+
+.movie-title {
+    font-size: 16px;
+    font-weight: bold;
+    margin: 0 0 4px 0;
+    white-space: normal;
+    overflow: visible;
+    text-overflow: ellipsis;
+}
+
+.year-rating-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+.movie-year {
+    color: black;
+    font-size: 16px;
+    margin-right: 5px;
+}
+
+.movie-genre {
+    color: black;
+    font-style: italic;
+    font-size: 12px;
+    margin-bottom: 5px;
+}
+
+.movie-rating {
+    color: #ffa500;
+    margin-bottom: 5px;
 }
