--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -3,7 +3,6 @@
 
 <head>
     <link rel="stylesheet" th:href="@{/css/search.css}">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 
 <body>
@@ -30,8 +29,7 @@
                             th:text="${#strings.length(movie.releaseDate) >= 4 ? #strings.substring(movie.releaseDate,0,4) : ''}">
                             Year</span>
                         <span class="movie-rating">
-                            <span class="fa fa-star"></span>
-                            <span th:text="${movie.rating}"></span>
+                            ★ <span th:text="${#numbers.formatDecimal(movie.rating, 1, 1)}"></span>
                         </span>
                     </span>
                     <div class="movie-genre">
