--- a/src/main/resources/static/css/search.css
+++ b/src/main/resources/static/css/search.css
@@ -59,21 +59,21 @@ h1 {
 }
 
 .movie-poster img {
-    width: 110px;
-    height: 160px;
+    width: 120px;
+    height: 170px;
     object-fit: cover;
     border-radius: 15px;
 }
 
 .movie-info {
-    padding: 20px;
+    padding: 10px 0px 10px 20px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
 }
 
 .movie-title {
-    margin: 0 0 10px 0;
+    margin: 0 0 5px 0;
     font-size: 24px;
 }
 
@@ -89,7 +89,7 @@ h1 {
 }
 
 .movie-genre {
-    margin: 10px 0 0 0;
+    margin: 5px 0 0 0;
     color: black;
     font-style: italic;
     font-size: 12px;
