--- a/src/main/resources/static/css/search.css
+++ b/src/main/resources/static/css/search.css
@@ -65,6 +65,18 @@ h1 {
     border-radius: 15px;
 }
 
+.no-poster {
+    width: 120px;
+    height: 170px;
+    display: flex;
+    background-color: rgb(224, 224, 224);
+    background-size: cover;
+    border-radius: 15px;
+    text-align: center;
+    font-size: 14px;
+    align-items: center;
+}
+
 .movie-info {
     padding: 10px 0px 10px 20px;
     display: flex;
@@ -74,7 +86,7 @@ h1 {
 
 .movie-title {
     margin: 0 0 5px 0;
-    font-size: 24px;
+    font-size: 18px;
 }
 
 .year-rating-container {
@@ -88,14 +100,26 @@ h1 {
     margin-right: 10px;
 }
 
+.movie-rating {
+    color: #ffa500;
+    margin-bottom: 5px;
+}
+
 .movie-genre {
-    margin: 5px 0 0 0;
+    margin-top: 5px;
+    display: flex;
+    flex-wrap: wrap;
     color: black;
     font-style: italic;
     font-size: 12px;
 }
 
-.movie-rating {
-    color: #ffa500;
-    margin-bottom: 5px;
+.movie-genre div:not(:last-child)::after {
+    content: ",";
+    margin-right: 5px;
+}
+
+.movie-description {
+    margin: 10px 10px 10px 0px;
+    font-size: 13px;
 }
