--- a/src/main/resources/static/css/search.css
+++ b/src/main/resources/static/css/search.css
@@ -1,47 +1,18 @@
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 20px;
-    background-color: #f4f4f4;
-}
-
 .container {
-    max-width: 800px;
+    max-width: 900px;
     margin: 0 auto;
 }
 
-h1 {
+h2 {
     text-align: left;
     color: #333;
 }
 
 .search-form {
+    padding-top: 20px;
     margin-bottom: 20px;
     display: flex;
     justify-content: center;
-}
-
-.search-input {
-    padding: 10px;
-    width: 300px;
-    border: 1px solid #ddd;
-    border-radius: 4px;
-    font-size: 16px;
-}
-
-.search-button {
-    padding: 10px 20px;
-    background-color: #007bff;
-    color: white;
-    border: none;
-    border-radius: 4px;
-    margin-left: 10px;
-    cursor: pointer;
-    font-size: 16px;
-}
-
-.search-button:hover {
-    background-color: #0056b3;
 }
 
 .movie-list {
