--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -2,10 +2,14 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head>
+    <title>Search</title>
+    <link rel="stylesheet" th:href="@{/css/main.css}">
     <link rel="stylesheet" th:href="@{/css/search.css}">
 </head>
 
 <body>
+    <div th:replace="~{header :: header}"></div>
+
     <div class="container">
         <!-- Search Form -->
         <form class="search-form" form action="/search" method="get">
@@ -13,7 +17,7 @@
             <button type="submit" class="search-button">Search</button>
         </form>
 
-        <h1 th:text="${searchTitle}">Search Result</h1>
+        <h2 th:text="${searchTitle}">Search Result</h2>
 
         <!-- Show movies if any exist -->
         <div class="movie-list" th:if="${movies != null}">
@@ -45,7 +49,8 @@
             </div>
         </div>
     </div>
-    </div>
+
+    <div th:replace="~{footer :: footer}"></div>
 </body>
 
 </html>
