--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -1,16 +1,19 @@
 body {
     font-family: Helvetica, sans-serif;
-    margin: 0;
     padding: 0px;
     background-color: #f4f4f4;
+    display: grid;
+    grid-template-rows: auto 1fr auto;
+    min-height: 100vh;
+    margin: 0;
 }
 
-/* Header */
-
-.site-name {
+a {
     text-decoration: none;
     color: inherit;
 }
+
+/* Header */
 
 h1 {
     font-size: 15px;
@@ -81,10 +84,9 @@ nav ul li a :hover {
 /* Footer */
 
 footer {
-    padding: 50px 20px 20px 20px;
+    padding: 30px 20px 20px 20px;
     position: relative;
     bottom: 0;
-    width: 100%;
 }
 
 .footer-content {
