--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -22,30 +22,31 @@
         <!-- Show movies if any exist -->
         <div class="movie-list" th:if="${movies != null}">
             <div class="movie-card" th:each="movie : ${movies}">
-                <div class="movie-poster">
-                    <img th:if="${movie.posterPath != null}"
-                        th:src="'https://image.tmdb.org/t/p/w200' + ${movie.posterPath}" th:alt="${movie.title}">
-                    <div class="no-poster" th:if="${movie.posterPath == null}">No Poster Available</div>
-                </div>
-                <div class="movie-info">
-                    <h2 class="movie-title" th:text="${movie.title}">Movie Title</h2>
-                    <span class="year-rating-container">
-                        <span class="movie-year"
-                            th:text="${#strings.length(movie.releaseDate) >= 4 ? #strings.substring(movie.releaseDate,0,4) : ''}">
-                            Year</span>
-                        <span class="movie-rating">
-                            ★ <span th:text="${#numbers.formatDecimal(movie.rating, 1, 1)}"></span>
+                <a th:href="@{'/movie/' + ${movie.id}}" class="movie-link">
+                    <div class="movie-poster">
+                        <img th:if="${movie.posterPath != null}"
+                            th:src="'https://image.tmdb.org/t/p/w200' + ${movie.posterPath}" th:alt="${movie.title}">
+                        <div class="no-poster" th:if="${movie.posterPath == null}">No Poster Available</div>
+                    </div>
+                    <div class="movie-info">
+                        <h2 class="movie-title" th:text="${movie.title}">Movie Title</h2>
+                        <span class="year-rating-container">
+                            <span class="movie-year"
+                                th:text="${#strings.length(movie.releaseDate) >= 4 ? #strings.substring(movie.releaseDate,0,4) : ''}">
+                                Year</span>
+                            <span class="movie-rating">
+                                ★ <span th:text="${#numbers.formatDecimal(movie.rating, 1, 1)}"></span>
+                            </span>
                         </span>
-                    </span>
-                    <div class="movie-genre">
-                        <div th:each="genre : ${movie.genres}"><span th:text="${genre.name}"></span></div>
+                        <div class="movie-genre">
+                            <div th:each="genre : ${movie.genres}"><span th:text="${genre.name}"></span></div>
+                        </div>
+                        <div class="movie-description">
+                            <div th:text="${movie.overview}"></div>
+                            <div th:if="${movie.overview == null}">Overview</div>
+                        </div>
                     </div>
-                    <div class="movie-description">
-                        <div th:text="${movie.overview}"></div>
-                        <div th:if="${movie.overview == null}">Overview</div>
-                    </div>
-
-                </div>
+                </a>
             </div>
         </div>
     </div>
