--- a/src/main/resources/static/css/movie-details.css
+++ b/src/main/resources/static/css/movie-details.css
@@ -76,6 +76,9 @@
 
 .genres {
     margin-bottom: 15px;
+    display: flex;
+    align-items: center;
+    gap: 10px;
 }
 
 .genres span {
@@ -84,17 +87,23 @@
 
 .genres ul {
     list-style-type: none;
-    padding: 10px 0 0 0;
-    margin: 5px 0 0 0;
+    padding: 0px 0 0 0;
+    margin: 0px 0 0 0;
 }
 
-.genres li {
-    display: inline-block;
+.genres-list {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 5px;
+}
+
+.genres-list li {
     background-color: #e0e0e0;
     padding: 5px 10px;
     border-radius: 15px;
-    margin-right: 5px;
-    margin-bottom: 5px;
     font-size: 14px;
 }
 
