--- a/src/main/resources/templates/movie-details.html
+++ b/src/main/resources/templates/movie-details.html
@@ -28,11 +28,21 @@
 
                     <div class="rating-section" sec:authorize="isAuthenticated()">
                         <div th:if="${userRating != null}" class="user-rating">
-                            Your rating: <span th:text="${userRating.rating}"></span>/5
+                            Your rating: ⭐ <span th:text="${#numbers.formatInteger(userRating, 0)}"></span> / 10
                         </div>
 
                         <form th:action="@{/movie/{id}/rate(id=${movie.id})}" method="post" class="rating-form">
                             <div class="star-rating">
+                                <input type="radio" id="star10" name="rating" value="10" />
+                                <label for="star10"></label>
+                                <input type="radio" id="star9" name="rating" value="9" />
+                                <label for="star9"></label>
+                                <input type="radio" id="star8" name="rating" value="8" />
+                                <label for="star8"></label>
+                                <input type="radio" id="star7" name="rating" value="7" />
+                                <label for="star7"></label>
+                                <input type="radio" id="star6" name="rating" value="6" />
+                                <label for="star6"></label>
                                 <input type="radio" id="star5" name="rating" value="5" />
                                 <label for="star5"></label>
                                 <input type="radio" id="star4" name="rating" value="4" />
