--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -15,6 +15,9 @@
             <ul>
                 <li><a href="/">Home</a></li>
                 <li><a href="/search">Search</a></li>
+                <li sec:authorize="isAuthenticated()">
+                    <a href="/recommendations">Recommendations</a>
+                </li>
                 <li sec:authorize="!isAuthenticated()">
                     <a href="/login">Login</a>
                 </li>
